[package]
name = "wa07-wasm-pack"
version = "0.1.0"
authors = ["Nick Farnan <nlf4@pitt.edu>"]
edition = "2018"

# "cdylib" to create a `.wasm` library, "rlib" for unit-test compatibility with
# `wasm-pack test`
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# SERialize/DEserialize library for Rust
serde = { version = "1.0", features = ["derive"] }
# Enable serde support in wasm-bindgen
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# Log to browser console from Rust
web-sys = { version = "0.3.51", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
